# clue

./: .gitignore  Cards.hs  Clue.cabal  Demo.hs  Game.hs  Makefile  Naive.hs  README
Player/: Naive.hs
src/: Demo.hs
src/Clue/: Cards.hs  Game.hs  Player.hs
src/Clue/Player/: Naive.hs
tests/: Tests.hs
tests/Clue/: Cards.hs
tests/Clue/Cards/: Tests.hs
tests/Clue/Player/Naive/: Tests.hs
