name: Clue
version:  0.1.0
cabal-version:  >= 1.8
author:   Noah Luck Easterly

category: Games
synopsis: A set of modules for playing simplified games of Clue (aka Cluedo)
build-type: Simple

source-repository head
  type: git
  location: git://github.com/rampion/clue.git

library
  ghc-options: -Wall -fno-warn-unused-do-bind
  build-depends: random, base, mtl
  exposed-modules: Clue.Game, Clue.Cards, Clue.Player, Clue.Player.Naive
  hs-source-dirs: src

executable clue-demo
  ghc-options: -Wall -fno-warn-unused-do-bind
  build-depends: random, base, mtl, haskell98, Clue
  main-is: Demo.hs
  hs-source-dirs: src

executable clue-tests
  ghc-options: -Wall -F -pgmF htfpp -fno-warn-unused-do-bind
  build-depends: random, base, mtl, HTF, Clue, QuickCheck
  main-is: Tests.hs
  hs-source-dirs: tests
